Fix alignment of text in right about section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,7 @@ h1, h2{
     padding-top: 30px;
     width: 33%;
     float: right;
+    text-align: right;
 }
 
 #center-about {
